tests/errors/collections/list_multiplication_zero.sad
items = [1, 2] * 0
show(items)
